# DermArbiter

./: .env.example  .gitignore  DERMABENCH_PROTOCOL.md  DERMABENCH_SCALING_PLAN.md  DermArbiter_Nature_Medicine_Outline.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: agents.yaml  benchmarks.yaml  default.yaml  experiments.yaml  tools.yaml
data/: boundary_probes.jsonl  sample_cases.jsonl
data/dermabench/: CLINICIAN_WORKSHEET_README.md
data/guideline_seed/: guidelines.jsonl
data/ham10000/: dermagent_subset.csv
dermarbiter/: __init__.py
dermarbiter/agents/: __init__.py  base_agent.py  generalist.py  moderator.py  skeptic.py  specialist.py
dermarbiter/core/: __init__.py  blackboard.py  config.py  debate_protocol.py  mock_factory.py  model_router.py  orchestrator.py  utils.py
dermarbiter/evaluation/: __init__.py  ablation.py  benchmark_runner.py  boundary_judge.py  boundary_runner.py  derm_codes.py  dermabench.py  fairness_analyzer.py  metrics.py  query_suite.py
docs/: agentic_benchmark_design.md  clinician_review_worksheet.md  naming_and_positioning.md  query_suite_alignment.md  scaling_plan.md
experiments/: 01_baseline_single_llm.py  02_dermarbiter_full.py  03_ablation_agents.py  04_ablation_debate.py  05_ablation_tools.py  06_fairness_analysis.py  dermagent_baseline.md
notebooks/: 01_panderm_test.py  02_agent_demo.py  03_full_pipeline_demo.py  04_evaluation.ipynb  05_case_rag_ingest_colab.ipynb  06_e2e_colab_real.ipynb  07_dermabench_v1lite_colab.ipynb  colab_validation.ipynb  colab_validation.py
scripts/: README.md  build_case_rag_index.py  build_dermabench.py  build_dermagent_subset.py  build_guideline_rag_index.py  convert_to_jsonl.py  curate_dermabench.py  download_datasets.py  make_colab_bundle.py  run_dermagent_subset.py  run_e2e_colab.py  run_e2e_gpu.py  setup_colab.py  validate_tools.py  validate_tools_colab.py
tests/: __init__.py  conftest.py  test_ablation_analyzer.py  test_agents.py  test_blackboard.py  test_boundary_judge.py  test_boundary_runner.py  test_build_case_rag_index.py  test_convert_to_jsonl.py  test_curate_dermabench.py  test_debate.py  test_dermabench.py  test_dermagent_subset.py  test_download_datasets.py  test_evaluation.py  test_experiments.py  test_guideline_rag_index.py  test_integration.py  test_model_router.py  test_panderm.py  test_query_suite.py  test_tools.py  test_week2_tools.py  test_week3_tools.py
(+24 files in other folders)
