[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "dermarbiter"
version = "0.1.0"
description = "Training-free multi-LLM debate framework for dermatological diagnosis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Furkan Ahi"},
    {name = "Mahmut Emre"},
]
keywords = ["dermatology", "LLM", "multi-agent", "debate", "diagnosis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.poetry]
name = "dermarbiter"
version = "0.1.0"
description = "Training-free multi-LLM debate framework for dermatological diagnosis"
authors = ["Furkan Ahi", "Mahmut Emre"]
license = "MIT"
readme = "README.md"
packages = [{include = "dermarbiter"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langgraph = ">=0.2"
langchain-core = ">=0.3"
langchain-google-genai = ">=2.0"
pydantic = ">=2.0"
pyyaml = ">=6.0"
numpy = ">=1.26"
transformers = ">=4.45"
torch = ">=2.0"
torchvision = ">=0.17"
timm = ">=1.0"
open-clip-torch = ">=2.26"
chromadb = ">=0.5"
sentence-transformers = ">=3.0"
networkx = ">=3.0"
Pillow = ">=10.0"
scikit-learn = ">=1.5"
scipy = ">=1.12"
pandas = ">=2.2"
matplotlib = ">=3.9"
python-dotenv = ">=1.0"
bitsandbytes = ">=0.43"
accelerate = ">=0.30"
groq = ">=0.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.5"

# Optional: only needed for the web-fetching modes of scripts/build_guideline_rag_index.py
# (--source urls / --source dermnet). The default --source local mode works without these.
[tool.poetry.group.ingest]
optional = true

[tool.poetry.group.ingest.dependencies]
requests = ">=2.31"
beautifulsoup4 = ">=4.12"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
